--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -180,14 +180,27 @@
                       %td もふもふの果てに
                       %td
                         クエスト「？？？」をコンプリートする
+
+                %p
+                  バディシステムに機能追加が行われ、新たに別の種類のバディとしてパイッサを呼び出すことが出来るようになります。
+                  %br
+                  チョコボとパイッサのランクは別々に扱われます。また、パイッサの初期ランク・獲得経験値量は現在のチョコボのランク・獲得経験値量を引き継ぎます。
             .card#fix-bugs
               .card-content
                 .card-title
                   不具合修正
+
+                %p
+                  %ul
+                    %li 一部モンスターのモーションが正しく再生されない問題を修正しました。
+                    %li 一部クエストにおいて表示されるべきNPCが表示されない問題を修正しました。
             .card#known-bugs
               .card-content
                 .card-title
                   確認されている不具合
+                %p
+                  %ul
+                    %li パイッサに対して特定のエモートをすると、クライアントが強制終了する不具合が確認されています。
 
 
 %script{ src:"https://code.jquery.com/jquery-2.1.4.min.js" }
