クエスト名を変更

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -84,7 +84,7 @@
                           %br
                           NPC"???"
                       %tr
-                        %td FF9のなにか
+                        %td パックを避けろ！！
                         %td
                           ファイター／ソーサラー レベル60
                           %br
@@ -100,7 +100,7 @@
                           %br
                           NPC"???"
                       %tr
-                        %td FF6のなにか
+                        %td ねむれるししを倒せ！
                         %td
                           ファイター／ソーサラー レベル60
                           %br
