召喚士に新規アクションを追加

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -165,6 +165,12 @@
                       %tr
                         %td 黒魔道士
                         %td ミラクルフラッシュ
+                      %tr
+                        %td 巴術士
+                        %td サモン（パイッサ）
+                      %tr
+                        %td 召喚士
+                        %td サモン（スクオンク）
             .card#item-info
               .card-content
                 .card-title
