パイッサ幻想伝説に統一

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,7 +23,7 @@
               %h2.caption 3.1415π パッチノート公開
               
               %p.white-text
-                パッチ3.1415πでは、サブストーリークエスト「パイッサの大冒険」を中心に新たな討滅戦、新バディや新ジョブの追加など様々な追加／調整が行われます。ぜひご覧ください。
+                パッチ3.1415πでは、サブストーリークエスト「パイッサ幻想伝説」を中心に新たな討滅戦、新バディや新ジョブの追加など様々な追加／調整が行われます。ぜひご覧ください。
               %p.red-text
                 このパッチノートはネタです。FF14ユーザーによる非公式なページです。間違っても鵜呑みにしないでください
 
