クエストの場所を仮に設定

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -80,7 +80,7 @@
                         %td
                           ファイター／ソーサラー レベル60
                           %br
-                          アジス・ラー(X,Y)
+                          かいはつしつ(X,Y)
                           %br
                           NPC"???"
                       %tr
@@ -88,7 +88,7 @@
                         %td
                           ファイター／ソーサラー レベル60
                           %br
-                          アジス・ラー(X,Y)
+                          ウルダハ・ナル回廊(X,Y)
                           %br
                           NPC"???"
                       %tr
@@ -96,7 +96,7 @@
                         %td
                           ファイター／ソーサラー レベル60
                           %br
-                          アジス・ラー(X,Y)
+                          リムサ・ロミンサ　上層甲板(X,Y)
                           %br
                           NPC"???"
                       %tr
@@ -104,7 +104,7 @@
                         %td
                           ファイター／ソーサラー レベル60
                           %br
-                          アジス・ラー(X,Y)
+                          イデルシャイア(X,Y)
                           %br
                           NPC"???"
                          
