不具合修正に追加

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -212,6 +212,7 @@
                   %ul
                     %li 一部モンスターのモーションが正しく再生されない問題を修正しました。
                     %li 一部クエストにおいて表示されるべきNPCが表示されない問題を修正しました。
+                    %li 「よしだ」を含む文字列を発言すると希にサーバーから切断される問題を修正しました。
             .card#known-bugs
               .card-content
                 .card-title
