フッター設定

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -228,7 +228,11 @@
         .col.s12.m8
           %h5.white-text このパッチノートについて
           %p.grey-text.text-lighten-4
-            内容その１
+            いちユーザーの突然に思いつきによって作られました。
+            %br
+            ふんだんとネタを盛り込もうと頑張った結果がこれです。
+            %br
+            皆さんに笑いのある一年をと思います。
         .col.s4.m4
           %h5.white-text Special Thanks
           
