フッターを豪華に

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -233,6 +233,11 @@
             ふんだんとネタを盛り込もうと頑張った結果がこれです。
             %br
             皆さんに笑いのある一年をと思います。
+            %br
+            %br
+            素材は
+            %a{ href:"http://flatxiv.com/" }Flatxiv
+            さんのをお借りしています
         .col.s4.m4
           %h5.white-text Special Thanks
           
