--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -13,6 +13,12 @@ nav {
 	line-height: 34px;
 }
 
+footer {
+	background-image: url( "../images/paissa_03.png" );
+	background-position: center;
+
+	text-shadow: 1px 1px 3px #000;
+}
 .caption {
 	color: #e6b422;
 	text-shadow: 3px 3px 5px #ad7d4c;
