復活の呪文追加

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -203,6 +203,13 @@
                   バディシステムに機能追加が行われ、新たに別の種類のバディとしてパイッサを呼び出すことが出来るようになります。
                   %br
                   チョコボとパイッサのランクは別々に扱われます。また、パイッサの初期ランク・獲得経験値量は現在のチョコボのランク・獲得経験値量を引き継ぎます。
+                %p
+                  新たなシステムとして「復活の呪文」が実装されます。
+                  %br
+                  システムメニュー→復活の呪文からご利用頂けます。
+                  %br
+                  復活の呪文が適用されるのは各クラスのレベル・経験値ならびに、各クエストの進捗状況です。
+
             .card#fix-bugs
               .card-content
                 .card-title
