--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -19,6 +19,10 @@ footer {
 
 	text-shadow: 1px 1px 3px #000;
 }
+
+p {
+	padding: 5px 0px;
+}
 .caption {
 	color: #e6b422;
 	text-shadow: 3px 3px 5px #ad7d4c;
