ジョブアクション周りを修正

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -171,6 +171,34 @@
                       %tr
                         %td 召喚士
                         %td サモン（スクオンク）
+                  以下のジョブにおいてアクションの効果が修正されます
+
+                  %table
+                    %thead
+                      %tr
+                        %th ジョブ・クラス名
+                        %th アクション名
+                    %tbody
+                      %tr
+                        %td 格闘士
+                        %td 破砕拳
+                      %tr
+                        %td 幻術士
+                        %td メディカ
+                      %tr
+                        %td 双剣士
+                        %td 旋風刃
+                      %tr
+                        %td 占星術師
+                        %td
+                          ヘリオス
+                          %br
+                          アスペクト・ヘリオス
+                          %br
+                          ダイアーナルセクト
+                          %br
+                          ノクターナルセクト
+
             .card#item-info
               .card-content
                 .card-title
