マイスター専用アクションとアイテムを追加

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -198,6 +198,17 @@
                           ダイアーナルセクト
                           %br
                           ノクターナルセクト
+                      %tr
+                        %td マイスター専用アクション
+                        %td
+                          仕事唄
+                          %br
+                          イノベイティブタッチ
+                          %br
+                          ビエルゴの奇跡
+                          %br
+                          匠の技
+                          
 
             .card#item-info
               .card-content
@@ -206,8 +217,9 @@
 
                 %p
                   新たなアイテムが追加されます。
-                  %br
-                  詳しくは「こちら」をご覧ください。
+                  
+                  %ul
+                    %li アポタムキンの笛
             .card#system-info
               .card-content
                 .card-title
